# Youtube-Recommendations

./: .gitignore  CLAUDE.md  Demo.md  LICENSE  README.md  docker-compose.yml  run.sh
.github/workflows/: cd.yaml  ci.yaml
backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: index.js
extension/: content.js  manifest.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/pages/: AdminPage.tsx  MainApp.tsx  Tutorial.tsx
frontend/src/services/: api.ts
k8s/: configmaps.yaml  deployments.yaml  hpa.yaml  ingress.yaml  services.yaml
ml/: Dockerfile  embeddings.py  inference.py  jax_model.py  jax_train.py  model.py  multi_stage_ranker.py  requirements.txt  server.py  test_recall_latency.py  train.py  train_from_events.py
mysql-init/: schema.sql
ocr-service/: .gitignore  Dockerfile  README.md  app.py  entrypoint.sh  hybrid_ocr.py  llm_parser.py  requirements.txt  screen_recorder.py  start.sh  youtube_api.py  youtube_scraper.py
ocr-service/cpp/: CMakeLists.txt  preprocess.cpp
opencv/: CMakeLists.txt  Dockerfile  benchmark.cpp  main.cpp
